fix: os icon and label alignments

--- a/static/css/v3/downloads_table_card.css
+++ b/static/css/v3/downloads_table_card.css
@@ -38,6 +38,12 @@
   color: var(--color-text-secondary);
 }
 
+.downloads-table-card__platform-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
 .downloads-table-card__os-icon {
   display: inline-flex;
   align-items: center;
